# fastapi_project

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  main.py  pyproject.toml  setup.cfg
chat/: config.py  main.py  models.py  repository.py  schemas.py
migrations/: env.py
migrations/versions/: 2023_09_19_1059-b3c3e41ede75_initial_migration.py
